--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ dockertest = { version = "0.3.1", optional = true }
 wiremock = "0.5"
 
 [dev-dependencies.tokio]
+version = "1.20.1"
 features = ["macros"]
 
 [features]
