--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,8 +2,8 @@
 name = "dockerfile-build"
 version = "0.1.0"
 edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+description = "A Rust library to automate building Docker images from a local Dockerfile"
+license = "MIT"
 
 [dependencies]
 bollard = "0.13"
